@@ -1,0 +1,6 @@
+#ifndef REMAKE_VPATH_H
+#define REMAKE_VPATH_H
+
+extern void print_vpath_data_base (void);
+
+#endif
